# vlm_cytomorphology_eval

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  clean_llama_answers.py  correct_double_file_extension.py  dataset_info_and_paths.py  delete_review_files_of_model.py  feature-extractor.py  feature-extractor_plot  fine_tune_Dino.py  finetune_llama_test.py  list_what_is_done.py  plot_conf_mat.py  plot_explainability.py  prepare_dataset.py  prepare_fine_tuning_jsonl.py  prepare_fine_tuning_subsets.py  process_michele_answers.py  prompts.py  pyproject.toml  remove_image_from_finetuning_jsonl.py  requirements.txt  review_all.py  run_api_inquiry.py  run_finetuneDino.sh  select_images_for_Michele_review.py  split_answers_into_folds.py
notebooks/: biomedclip_experiment.ipynb  conch_experiment.ipynb
scripts/: run_finetuneDino.sh
src/vlm_cytomorphology_eval/config/: dataset_info_and_paths.py
src/vlm_cytomorphology_eval/data/: prepare_dataset.py  prepare_fine_tuning_subsets.py  split_answers_into_folds.py
src/vlm_cytomorphology_eval/evaluation/: review_all.py
src/vlm_cytomorphology_eval/expert_review/: select_images_for_expert_review.py
src/vlm_cytomorphology_eval/features/: feature_extractor.py
src/vlm_cytomorphology_eval/inference/: run_api_inquiry.py
src/vlm_cytomorphology_eval/models/: deepseek_api.py  gemini_api.py  gpt_api.py  llama_api.py  medflamingo_api.py
src/vlm_cytomorphology_eval/prompts/: prompts.py
vlm_models/: deep_seek_api.py  deepseek_api.py  gemini_api.py  gpt_api.py  llama_api.py  llavamed_api.py  medflamingo_api.py
(+2 files in other folders)
